# Marty

./: .coveragerc  .env.demo  .gitignore  .markdownlint.yaml  .markdownlintignore  .pre-commit-config.yaml  .radon.cfg  ADVANCED_MONITORING_IMPLEMENTATION.md  ARCHITECTURE.md  CERTIFICATE_MANAGEMENT_FRAMEWORK_DESIGN.md  CERTIFICATE_MANAGEMENT_MIGRATION_PLAN.md  CHANGELOG.md  CONFIGURATION_CONSOLIDATION_GUIDE.md  CONFIGURATION_CONSOLIDATION_SUMMARY.md  CRYPTO_BOUNDARIES_COMPLETE.md  CRYPTO_BOUNDARIES_IMPLEMENTATION.md  DATABASE_PER_SERVICE_FINAL.md  DATABASE_PER_SERVICE_IMPLEMENTATION.md  DEMO_README.md  DEPLOYMENT_POLISH_SUMMARY.md  DRY_CONFIG_COMPARISON.md  DRY_IMPLEMENTATION_COMPLETE.md  DRY_IMPLEMENTATION_SUMMARY.md  DRY_IMPROVEMENTS.md  DRY_REFACTORING_RECOMMENDATIONS.md  DRY_SYNTHETIC_DATA_IMPLEMENTATION.md  DUPLICATE_FILES_REMOVAL.md  ENHANCED_DRY_IMPLEMENTATION_SUMMARY.md  EUDI_BRIDGE_IMPLEMENTATION_SUMMARY.md  EUDI_IMPLEMENTATION_COMPLETE.md  HIGH_PRIORITY_DRY_IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  K8S_VALIDATION_SUMMARY.md  LICENSE  MARTY_MMF_FRAMEWORK_GAPS_IMPLEMENTATION.md  MARTY_MMF_MIGRATION_STRATEGY.md  MARTY_MMF_PLUGIN_IMPLEMENTATION_ROADMAP.md  MARTY_MMF_PLUGIN_STRATEGY.md  MARTY_MMF_PLUGIN_TECHNICAL_GUIDE.md  (+30 more)
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: cd.yml  ci.yml  docs.yml  k8s-e2e.yml  proto-validation.yml  (+2 more)
config/: annex9_data_retention.yaml  base.yaml  cedar_schema.cedarschema  certificate_lifecycle_monitor.json  development.yaml  development_per_service_example.yaml  policy.yaml  production.yaml  resilience_development.yaml  resilience_production.yaml  resilience_testing.yaml  rule_pack_schema.yaml  testing.yaml  testing_k8s.yaml
demo-openwallet-sdk/: ENHANCED_FEATURES_SUMMARY.md  Makefile  PROJECT_STRUCTURE.md  README.md  build.sh  cleanup.sh  deploy-k8s.sh  docker-compose.yml
demo-service/: config.yaml  main.py
docker/: README.md  base.Dockerfile  consistency-engine.Dockerfile  credential-ledger.Dockerfile  csca-service.Dockerfile  dev-entrypoint.sh  docker-compose.demo-microsoft-simple.yml  docker-compose.demo-microsoft.yml  docker-compose.demo.yml  docker-compose.integration.yml  docker-compose.logging.yml  docker-compose.openxpki.yml  docker-compose.security.yml  docker-compose.test-db.yml  docker-compose.trust-dev.yml  docker-compose.yml  document-signer.Dockerfile  dtc-engine-new.Dockerfile  dtc-engine.Dockerfile  grpc-test.Dockerfile  inspection-system.Dockerfile  mdl-engine.Dockerfile  mdoc-engine.Dockerfile  mmf-plugin.Dockerfile  openxpki.env.example  passport-engine.Dockerfile  pkd-service-new.Dockerfile  pkd-service.Dockerfile  service-simple.Dockerfile  service-template.Dockerfile  service.Dockerfile  trust-anchor-new.Dockerfile  trust-anchor.Dockerfile  trust-service.Dockerfile  trust-svc.Dockerfile  ui-app-e2e.Dockerfile  ui-app.Dockerfile
docs/: ADVANCED_MONITORING_IMPLEMENTATION.md  ANNEX9_IMPLEMENTATION_GUIDE.md  BUSINESS_OVERVIEW.md  CEDAR_POLICY_INTEGRATION.md  CENTRALIZED_LOGGING.md  CERTIFICATE_EXPIRY_SERVICE.md  CERTIFICATE_LIFECYCLE_MANAGEMENT.md  CERTIFICATE_PARSING.md  CHANGELOG.md  CONFORMANCE_TESTING_MATRIX.md  CONSISTENCY_ENGINE.md  CRYPTOGRAPHIC_BOUNDARIES_GUIDE.md  DATABASE_PER_SERVICE.md  DATABASE_QUICK_START.md  DEVELOPER_GUIDE.md  DRY_IMPLEMENTATION_GUIDE.md  DRY_REFACTORING_GUIDE.md  DUPLICATE_FILES_REMOVAL.md  ENHANCED_E2E_TESTING_STRATEGY.md  FEATURE_IMPLEMENTATION_SUMMARY.md  GRPC_SERVICE_FACTORY_GUIDE.md  LEGACY_CLEANUP_GUIDE.md  LEGACY_CONFIG_REMOVAL_PLAN.md  MYPY_IMPLEMENTATION_SUMMARY.md  MYPY_QUICKSTART.md  OBSERVABILITY_DEPLOYMENT_GUIDE.md  OBSERVABILITY_IMPLEMENTATION.md  OPENXPKI_INTEGRATION.md  PERFORMANCE_TESTING.md  PHASE2_RFID_ARCHITECTURE.md  PROMETHEUS_MONITORING.md  PROTOBUF_COMPATIBILITY_POLICY.md  README.md  README_ENHANCED_TEST.md  README_openid4vp.md  RESILIENCE.md  RESILIENCE_IMPLEMENTATION_GUIDE.md  RESILIENCE_QUICKSTART.md  SECURITY.md  SECURITY_CRYPTO.md  (+18 more)
examples/: monitoring_integration.py  mrz_migration_example.py  read_ml_file.py  wallet-demo.http
helm/: Chart.yaml  values-template.yaml  values.yaml
k8s/: README.md  TESTING_FRAMEWORK.md  consistency-engine.yaml  deploy.sh  dev.sh  microsoft-demo-simple.yaml  microsoft-demo.yaml  namespace.yaml  postgres-dev.yaml  test.sh
monitoring/: README.md  deploy-monitoring.sh  grafana_dashboard.json  grafana_observability_dashboard.py  prometheus_alerts.yml
proto/: biometric_service.proto  cmc_engine.proto  common_services.proto  consistency_engine.proto  csca_service.proto  data_lifecycle.proto  document_signer.proto  dtc_engine.proto  inspection_system.proto  mdl_engine.proto  mdoc_engine.proto  passport_engine.proto  pkd_service.proto  rfid_service.proto  storage_policy.proto  td2_service.proto  trust_anchor.proto  visa_service.proto
reports/: observability_migration_summary.md  observability_migration_validation.json  validation_results.json
scripts/: .env.microsoft  .env.microsoft.portforward.example  README.md  acme_bootstrap.sh  build-docker-dry.sh  build-services.sh  check-microsoft-demo-status.sh  cleanup-microsoft-demo.sh  configure-microsoft-demo-tunnels.sh  debug_template.py  demo_synthetic_data.py  dev.sh  final_db_per_service_verification.py  generate_api_docs.py  generate_docs.sh  generate_dry_configs.py  generate_keys.py  generate_service.py  generate_simple_docs.py  generate_synthetic_data.py  init-demo-db.sql  init-production-databases.sql  init-test-databases.sql  migrate_mrz_usage.py  migration_config.py  performance_monitoring.py  performance_test.py  pkd_sync.py  run_perf_test.sh  security_scan.sh  seed_demo_data.py  setup-microsoft-demo-complete.sh  setup-microsoft-k8s-portforward.sh  setup-microsoft-portforward.sh  setup-microsoft-tunnel.sh  setup_databases.py  setup_dev_env.sh  setup_logging.sh  setup_openid4vp_tests.py  setup_openxpki.sh  (+11 more)
src/: __init__.py  compile_protos.py  main.py  mock.py
templates/: README.md
tests/: __init__.py  conftest.py  isolation.py  mock_csca_test.py  standalone_csca_lifecycle_test.py  test_secure_crypto.py
(+955 files in other folders)
