[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "marty-grpc"
version = "0.1.0"
description = "Enterprise-grade microservices platform for secure digital identity document management (eMRTD, mDL, DTC) with ICAO PKI compliance"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "grpcio>=1.59.0",
    "grpcio-tools>=1.59.0",
    "protobuf>=4.24.4",
    "pydantic>=2.4.2",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",
    "watchdog>=3.0.0",
    "cryptography>=41.0.7",
    "asn1crypto>=1.5.1",
    "cbor2>=5.4.6",
    "pillow>=10.1.0",
    "scipy>=1.11.4",
    "playwright>=1.40.0",
    "qrcode>=7.4.2",
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-html>=4.1.1",
    "loguru>=0.7.2",
    "requests>=2.32.5",
    "sqlalchemy[asyncio]>=2.0.29",
    "asyncpg>=0.29.0",
    "aioboto3>=13.1.1",
    "aiokafka>=0.8.1",
    "alembic>=1.13.1",
    "tenacity>=8.3.0",
]

[project.optional-dependencies]
biometric = [
    "face-recognition>=1.3.0",
    "opencv-contrib-python>=4.8.1.78",
    "scikit-image>=0.22.0",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-v",  # Verbose output
    "--tb=short",  # Short traceback format
    "--strict-markers",
    "--strict-config",
    "--color=yes",  # Force colored output
    "--durations=10",  # Show 10 slowest tests
    "--maxfail=5",  # Stop after 5 failures
    "--disable-warnings",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*", "*Tests"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests for component workflows and real docker-compose service stack (no UI mock data)",
    "performance: Performance and load tests",
    "slow: Tests that take significant time to run",
    "security: Security-focused tests",
    "e2e: marks tests as end-to-end tests",
    "smoke: marks tests as smoke tests",
    "ui: marks tests as UI tests",
    "passport: marks tests as passport-related tests",
    "mdl: marks tests as mobile driver license tests",
    "admin: marks tests as admin interface tests",
    "mvp: marks tests that cover the defined MVP feature set",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning", 
    "ignore::UserWarning:cryptography.*",
    "ignore::pytest.PytestUnraisableExceptionWarning"
]
norecursedirs = [
    "docs",
    "build",
    "dist",
    ".tox",
    "venv",
    "env",
    "__pycache__"
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[project.scripts]
compile-protos = "src.compile_protos:compile_all_protos"
csca-service = "apps.csca_service:main"
document-signer = "apps.document_signer:main"
inspection-system = "apps.inspection_system:main"
mdl-engine = "apps.mdl_engine:main"
mdoc-engine = "apps.mdoc_engine:main"
passport-engine = "apps.passport_engine:main"
pkd-service = "apps.pkd_service:main"
trust-anchor = "apps.trust_anchor:main"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "B",   # flake8-bugbear
    "I",   # isort
    "C90", # mccabe complexity
    "UP",  # pyupgrade
    "S",   # bandit (security)
    "N",   # pep8-naming
    "ANN", # flake8-annotations
    "ASYNC", # flake8-async
    "BLE", # flake8-blind-except
    "COM", # flake8-commas
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "EM",  # flake8-errmsg
    "EXE", # flake8-executable
    "FA",  # flake8-future-annotations
    "ISC", # flake8-implicit-str-concat
    "ICN", # flake8-import-conventions
    "LOG", # flake8-logging
    "PIE", # flake8-pie
    "PYI", # flake8-pyi
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes
    "RSE", # flake8-raise
    "RET", # flake8-return
    "SLF", # flake8-self
    "SLOT", # flake8-slots
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "TD",  # flake8-todos
    "FIX", # flake8-fixme
    "ERA", # eradicate
    "PD",  # pandas-vet
    "PGH", # pygrep-hooks
    "PL",  # pylint
    "TRY", # tryceratops
    "FLY", # flynt
    "NPY", # numpy
    "PERF", # perflint
    "FURB", # refurb
    "RUF", # ruff-specific rules
]
ignore = [
    "ANN001", # Missing type annotation for function argument
    "ANN002", # Missing type annotation for *args
    "ANN003", # Missing type annotation for **kwargs
    "COM812", # Missing trailing comma (conflicts with formatter)
    "ISC001", # Single line implicit string concatenation (conflicts with formatter)
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "S101",   # Use of assert (common in tests)
    "PLR0913", # Too many arguments in function definition
    "PLR2004", # Magic value used in comparison
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # Use of assert
    "PLR2004", # Magic values in tests are OK
    "ANN",     # Type annotations not required in tests
]
"src/tests/**/*.py" = [
    "S101",    # Use of assert
    "PLR2004", # Magic values in tests are OK
    "ANN",     # Type annotations not required in tests
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 8
max-branches = 12
max-returns = 6
max-statements = 50

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["src", "marty_grpc"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.bandit]
exclude_dirs = ["tests", "src/tests"]
skips = ["B101"]  # Skip assert_used test

[tool.bandit.assert_used]
skips = ["*_test.py", "*test*.py"]

[tool.pydocstyle]
convention = "google"
add_ignore = ["D100", "D104", "D105", "D107"]
match_dir = "(?!tests|migrations).*"

[tool.xenon]
max_average = "B"
max_modules = "B"
max_absolute = "B"
ignore = ["migrations", "tests"]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]



[tool.uv]
# UV-specific configurations - fixed format
sources = { marty-grpc = { path = ".", editable = true } }

[dependency-groups]
dev = [
    "playwright>=1.48.0",
    "pytest-html>=4.1.1",
    "pytest-xdist>=3.6.1",
    "pytest-asyncio>=0.24.0",
    # Code quality tools
    "pre-commit>=3.6.0",
    "black>=24.2.0",
    "isort>=5.13.2",
    "mypy>=1.8.0",
    "bandit>=1.7.5",
    "xenon>=0.9.1",
    "pydocstyle>=6.3.0",
    "safety>=3.0.0",
    "radon>=6.0.1",
    # Type stubs
    "types-requests>=2.31.0",
    "types-PyYAML>=6.0.0",
    "grpcio-testing>=1.75.0",
    "ruff>=0.13.2",
]
